erDiagram
    USERS ||--o{ MONTHLY_CYCLES : "manages (admin)"
    MONTHLY_CYCLES ||--o{ PATIENT_RECORDS : "contains"
    PATIENT_RECORDS ||--o{ CASE_PAYMENTS : "has installments"
    PATIENT_RECORDS }o--|| LABS : "assigned to"
    MONTHLY_CYCLES ||--|| MONTHLY_FINANCIALS : "summarized by"

    USERS {
        uuid id PK
        string username
        string password_hash
        enum role "ADMIN or ASSISTANT"
    }

    MONTHLY_CYCLES {
        uuid id PK
        string month_year
        enum status "OPEN , CLOSED"
    }

    LABS {
        uuid id PK
        string lab_name
    }

    PATIENT_RECORDS {
        uuid id PK
        uuid cycle_id FK
        date entry_date
        string patient_name
        string address "optional"
        enum category "GP or CASE"
        string diagnosis
        decimal total_cost
        uuid lab_id FK "FK to LABS, assistant can assign"
        decimal lab_fee "admin-assigned"
        enum lab_payment_status "PAID or UNPAID, admin-only"
        boolean is_carried_forward
    }

    CASE_PAYMENTS {
        uuid id PK
        uuid record_id FK
        date payment_date
        decimal paid_amount
        string payment_note
        enum payment_status "PAID or UNPAID - only for CASE patients, drives carry-forward"
    }

    MONTHLY_FINANCIALS {
        uuid id PK
        uuid cycle_id FK
        decimal total_gp
        decimal total_case
        decimal gross_income
        decimal lab_fee
        decimal relieving_fee
        decimal general_expenses
        decimal assistant_fee
        decimal bonus
        decimal utility_costs
        decimal building_rent
        decimal net_profit
    }
